styles/styles.css
@font-face { /* Oswald FW: 400, FS: normal */
    font-family: 'Oswald';
    src: 
        url('../resources/fonts/oswald/oswald-regular-webfont.woff2') format('woff2'),
        url('../resources/fonts/oswald/oswald-regular-webfont.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}

@font-face { /* Oswald FW: 400, FS: italic */
    font-family: 'Oswald';
    src: 
        url('../resources/fonts/oswald/oswald-regularitalic-webfont.woff2') format('woff2'),
        url('../resources/fonts/oswald/oswald-regularitalic-webfont.woff') format('woff');
    font-weight: 400;
    font-style: italic;
    font-display: swap;
}

@font-face { /* Oswald FW: 500, FS: normal */
    font-family: 'Oswald';
    src: 
        url('../resources/fonts/oswald/oswald-medium-webfont.woff2') format('woff2'),
        url('../resources/fonts/oswald/oswald-medium-webfont.woff')
        format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face { /* Oswald FW: 500, FS: italic */
    font-family: 'Oswald';
    src: 
        url('../resources/fonts/oswald/oswald-mediumitalic-webfont.woff2') format('woff2'),
        url('../resources/fonts/oswald/oswald-mediumitalic-webfont.woff') format('woff');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

@font-face { /* Oswald FW: 700, FS: normal */
    font-family: 'Oswald';
    src: 
        url('../resources/fonts/oswald/oswald-bold-webfont.woff2') format('woff2'),
        url('../resources/fonts/oswald/oswald-bold-webfont.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}

@font-face { /* Oswald FW: 700, FS: italic */
    font-family: 'Oswald';
    src: 
        url('../resources/fonts/oswald/oswald-bolditalic-webfont.woff2') format('woff2'),
        url('../resources/fonts/oswald/oswald-bolditalic-webfont.woff') format('woff');
    font-weight: 700;
    font-style: italic;
    font-display: swap;
}

@font-face { /* Source Serif Pro FW: 400, FS: normal */
    font-family: 'Source Serif Pro';
    src: 
        url('../resources/fonts/sourceserifpro/sourceserifpro-regular-webfont.woff2') format('woff2'),
        url('../resources/fonts/sourceserifpro/sourceserifpro-regular-webfont.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}

@font-face { /* Source Serif Pro FW: 400, FS: italic */
    font-family: 'Source Serif Pro';
    src: 
        url('../resources/fonts/sourceserifpro/sourceserifpro-regularit-webfont.woff2') format('woff2'),
        url('../resources/fonts/sourceserifpro/sourceserifpro-regularit-webfont.woff') format('woff');
    font-weight: 400;
    font-style: italic;
    font-display: swap;
}

@font-face { /* Source Serif Pro FW: 700, FS: normal */
    font-family: 'Source Serif Pro';
    src: 
        url('../resources/fonts/sourceserifpro/sourceserifpro-bold-webfont.woff2') format('woff2'),
        url('../resources/fonts/sourceserifpro/sourceserifpro-bold-webfont.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}

@font-face { /* Source Serif Pro FW: 700, FS: italic */
    font-family: 'Source Serif Pro';
    src: 
        url('../resources/fonts/sourceserifpro/sourceserifpro-boldit-webfont.woff2') format('woff2'),
        url('../resources/fonts/sourceserifpro/sourceserifpro-boldit-webfont.woff') format('woff');
    font-weight: 700;
    font-style: italic;
    font-display: swap;
}

html {
    box-sizing: border-box;
}

* {
    box-sizing: inherit;
}

*::before, *::after {
    box-sizing: inherit;
}

body {
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 5fr;
    width: 100vw;
    height: 100vh;
}

.sidebar {
    background-color: #15803d;
    color: white;
    padding-left: 20px;
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    font-family: 'Oswald';
    font-size: 2rem;
    font-weight: 400;
    display: grid;
    align-items: start;
    align-content: start;
}

.sidebar img {
    max-width: 45px;
}

.branding,
.nav-container,
.settings-container {
    display: grid;
    justify-items: start;
}

.sidebar ul {
    padding-left: 0px;
    display: grid;
    gap: 20px;
}

.branding a {
    font-size: 2.5rem;
    font-weight: 700;
}

.branding img {
    max-width: 60px;
}

.sidebar li {
    list-style: none;
    display: flex;
    align-items: start;
    gap: 15px;
}

.sidebar a { /*Remember all link elements are inside li elements, making these flex items*/
    color: white;
    text-decoration: none;
    align-self: flex-end;
}

.header {
    background-color: orange;
    grid-column: 2 / 3;
    grid-row: 1 / 2;
}

.main-content {
    background-color: white;
    grid-column: 2 / 3;
    grid-row: 2 / 3;
}

